service.yaml
apiVersion: serving.knative.dev/v1
kind: Service
metadata:
  name: hellov4
  namespace: default
spec:
  template:
    spec:
      containers:
      - image: jairjosafath/hellov4
