deployment.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: echo-api
  labels:
    app: echo-api
spec:
  replicas: 1
  selector:
    matchLabels:
      app: echo-api
  template:
    metadata:
      labels:
        app: echo-api
    spec:
      containers:
        - name: echo-api
          image: jairjosafath/echo-api:latest # Replace with your actual image repository if needed.
          securityContext:
            privileged: true
          ports:
            - containerPort: 8090
          resources:
            limits:
              memory: "128Mi"
              cpu: "500m"
            requests:
              memory: "64Mi"
              cpu: "250m"
---
apiVersion: v1
kind: Service
metadata:
  name: echo-api
  labels:
    app: echo-api
spec:
  selector:
    app: echo-api
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8090
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: echo-api
spec:
  ingressClassName: nginx # Specify your ingress controller's class name here.
  rules:
    - host: echo-api.192.168.49.2.nip.io # Replace with your Minikube IP (e.g., echo-api.192.168.49.2.nip.io).
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: echo-api
                port:
                  number: 80
