infra.yml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: faas-frontend
  labels:
    app: faas-frontend
spec:
  replicas: 1
  selector:
    matchLabels:
      app: faas-frontend
  template:
    metadata:
      labels:
        app: faas-frontend
    spec:
      containers:
        - name: faas-frontend
          image: nginx:1.14.2
          ports:
            - containerPort: 80
          resources:
            requests:
              memory: "64Mi"
              cpu: "250m"
            limits:
              memory: "128Mi"
              cpu: "500m"
          volumeMounts:
            - name: faas-html
              mountPath: /usr/share/nginx/html
      volumes:
        - name: faas-html
          configMap:
            name: faas-html
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: faas-api
spec:
  replicas: 1
  selector:
    matchLabels:
      app: faas-api
  template:
    metadata:
      labels:
        app: faas-api
    spec:
      serviceAccountName: faas-api
      containers:
        - name: dind
          image: docker:20.10-dind
          securityContext:
            privileged: true
          volumeMounts:
            - name: dind-data
              mountPath: /var/lib/docker
          args:
            - --insecure-registry=harbor.default.svc.cluster.local
            - --insecure-registry=registry.faas.test
            - --insecure-registry=harbor
          resources:
            requests:
              cpu: "500m"
              memory: "1Gi"
            limits:
              cpu: "2"
              memory: "4Gi"

        - name: faas-api
          image: jairjosafath/faas-api:latest
          ports:
            - containerPort: 8090
          resources:
            requests:
              memory: "64Mi"
              cpu: "250m"
            limits:
              memory: "128Mi"
              cpu: "500m"
      volumes:
        - name: dind-data
          emptyDir: {}
---
apiVersion: v1
kind: Service
metadata:
  name: faas-api
  labels:
    app: faas-api
spec:
  ports:
    - port: 8090
      targetPort: 8090
  selector:
    app: faas-api
  type: ClusterIP
---
apiVersion: v1
kind: Service
metadata:
  name: faas-frontend
  labels:
    app: faas-frontend
spec:
  ports:
    - port: 80
      targetPort: 80
  selector:
    app: faas-frontend
  type: ClusterIP
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: faas-ingress
spec:
  ingressClassName: nginx
  rules:
    - host: www.faas.test
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: faas-frontend
                port:
                  number: 80
          - path: /api
            pathType: Prefix
            backend:
              service:
                name: faas-api
                port:
                  number: 8090
    - host: registry.faas.test
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: harbor
                port:
                  number: 80
---
